# aprova-mais

./: .env.example  .env.prod  .gitignore  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  TUTORIAL-CURSO.md  Taskfile.yml  capacitor.config.ts  constants.ts  docker-compose.prod.yml  docker-compose.yml  environment.d.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  ra-language-portuguese.d.ts
actions/: challenge-progress.ts  user-progress.ts  user-subscription.ts
app/: globals.css  layout.tsx
app/(auth)/: header.tsx
app/(main)/: layout.tsx
app/(marketing)/: footer.tsx  header.tsx  page.tsx
app/admin/: app-content.tsx
app/lesson/: card.tsx  challenge.tsx  footer.tsx  (+5 more)
cockpit/: Cargo.toml
cockpit/src/: app.rs  config.rs  main.rs  types.rs
cockpit/src/actions/: deploy.rs  mod.rs
cockpit/src/collectors/: docker.rs  git.rs  http_health.rs  mod.rs  system.rs
cockpit/src/components/: header.rs  mod.rs  status_bar.rs  tabs.rs
cockpit/src/ui/: containers.rs  dashboard.rs  database.rs  deploy.rs  logs.rs  mod.rs  security.rs
components/: banner.tsx  mobile-header.tsx  promo.tsx  quests.tsx  sidebar.tsx  supabase-provider.tsx  theme-toggle.tsx
config/: index.ts
db/: drizzle.ts  queries.ts  schema.ts
drizzle/: 0000_add_challenge_progress_unique.sql
godot-app/: project.godot
lib/: admin-i18n.ts  admin-theme.ts  admin.ts  api-helpers.ts  stripe.ts  supabase-browser.ts  supabase-server.ts
nginx/: nginx.conf
scripts/: deploy.sh  export_lessons_json.ts  mobile-build-android.sh  mobile-build-ios.sh  prod.ts  setup.sh
(+71 files in other folders)
