[package]
name = "aprova-cockpit"
version = "0.1.0"
edition = "2024"
description = "Operational TUI cockpit for Aprova+ deployment"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
bollard = "0.18"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
sysinfo = "0.33"
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.19"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
tokio-util = "0.7"
